<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		
		<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/resolution_label"/>
        <LinearLayout
    		android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			<Spinner android:id="@+id/resolution_spinner"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content">
			</Spinner>  
		</LinearLayout>
		<LinearLayout
    		android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			<EditText 
				android:id="@+id/width_input"
				android:layout_width="80dp" 
				android:layout_height="wrap_content"
				android:gravity="right|center_vertical"
				android:singleLine="true"
				android:inputType="number"
				android:maxLength="4"/>
			<TextView
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/resolution_times"/>
			<EditText 
				android:id="@+id/height_input"
				android:layout_width="80dp" 
				android:layout_height="wrap_content"
				android:gravity="right|center_vertical"
				android:singleLine="true"
				android:inputType="number"
				android:maxLength="4"/>
		</LinearLayout>

    	<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/ip_setting_label"/>
    	
    	<LinearLayout
    		android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			
			<!-- address1 -->
			<LinearLayout
    				android:orientation="vertical"
    				android:layout_gravity="center_horizontal"
    				android:layout_width="wrap_content"
    				android:layout_height="wrap_content">
				 
				    <Button android:id="@+id/address1_increment" 
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/digits_increment"/>
				 
				    <EditText 
				        android:id="@+id/address1_input"
				        android:layout_width="60dp" 
				        android:layout_height="wrap_content"
				        android:gravity="right|center_vertical"
				        android:singleLine="true"
						android:inputType="number"
						android:maxLength="3"/>
				 
				    <Button 
				        android:id="@+id/address1_decrement" 
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/digits_decrement"/>
			</LinearLayout>
    	    <TextView
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/address_dot"/>
    	    
 			<!-- address2 -->
			<LinearLayout
    				android:orientation="vertical"
    				android:layout_gravity="center_horizontal"
    				android:layout_width="wrap_content"
    				android:layout_height="wrap_content">
				 
				    <Button android:id="@+id/address2_increment" 
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/digits_increment"/>
				 
				    <EditText 
				        android:id="@+id/address2_input"
				        android:layout_width="60dp" 
				        android:layout_height="wrap_content"
				        android:gravity="right|center_vertical"
				        android:singleLine="true"
						android:inputType="number"
						android:maxLength="3"/>
				 
				    <Button 
				        android:id="@+id/address2_decrement" 
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/digits_decrement"/>
			</LinearLayout>
    	    <TextView
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/address_dot"/>   	    

			<!-- address3 -->
			<LinearLayout
    				android:orientation="vertical"
    				android:layout_gravity="center_horizontal"
    				android:layout_width="wrap_content"
    				android:layout_height="wrap_content">
				 
				    <Button android:id="@+id/address3_increment" 
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/digits_increment"/>
				 
				    <EditText 
				        android:id="@+id/address3_input"
				        android:layout_width="60dp" 
				        android:layout_height="wrap_content"
				        android:gravity="right|center_vertical"
				        android:singleLine="true"
						android:inputType="number"
						android:maxLength="3"
						android:digits="0123456789"/>
				 
				    <Button 
				        android:id="@+id/address3_decrement" 
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/digits_decrement"/>
			</LinearLayout>
    	    <TextView
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:text="@string/address_dot"/>    
				
			<!-- address4 -->
			<LinearLayout
    				android:orientation="vertical"
    				android:layout_gravity="center_horizontal"
    				android:layout_width="wrap_content"
    				android:layout_height="wrap_content">
				 
				    <Button android:id="@+id/address4_increment" 
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/digits_increment"/>
				 
				    <EditText 
				        android:id="@+id/address4_input"
				        android:layout_width="60dp" 
				        android:layout_height="wrap_content"
				        android:gravity="right|center_vertical"
				        android:singleLine="true"
						android:inputType="number"
						android:maxLength="3"/>
				 
				    <Button 
				        android:id="@+id/address4_decrement" 
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:text="@string/digits_decrement"/>
			</LinearLayout>
	    
    	    	    	    
    	</LinearLayout>
    	
     	<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/port_setting_label"/>
     	
    	<LinearLayout
    		android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			
			<EditText 
				android:id="@+id/port_input"
				android:layout_width="80dp" 
				android:layout_height="wrap_content"
				android:gravity="right|center_vertical"
				android:singleLine="true"
				android:inputType="number"
				android:maxLength="4"/>
			
			   <RadioGroup 
			       	android:id="@+id/port_radiogroup"
			       	android:orientation="vertical"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content">
			        <RadioButton android:id="@+id/port_80"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/port_80_with_explanation" />
			        <RadioButton android:id="@+id/port_8080"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/port_8080_with_explanation" />
    			</RadioGroup>
			
    	 </LinearLayout>
     	
     	<TextView
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/command_setting_label"/>

		<LinearLayout
    		android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			<EditText
					android:id="@+id/command_input"
					android:layout_width="200dp" 
					android:layout_height="wrap_content"
					android:gravity="left|center_vertical"
					android:singleLine="true"
					android:inputType="text" />
		</LinearLayout>

			<RadioGroup 
				       	android:id="@+id/command_radiogroup"
				       	android:orientation="vertical"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center">
				        <RadioButton android:id="@+id/command_streaming"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/command_streaming_with_explanation" />
				        <RadioButton android:id="@+id/command_videofeed"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/command_videofeed_with_explanation" />
			</RadioGroup>

     			
		<Button android:id="@+id/settings_done"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/settings_done" />
    </LinearLayout>
</ScrollView>
